--- a/index.html
+++ b/index.html
@@ -7,12 +7,17 @@
   </head>
   <body>
     <div id="app"></div>
+    <script src="./core/observer.js"></script>
     <script src="./core/vue.js"></script>
     <script>
       const vm = new Vue({
         el: '#app',
         data: {
-          msg: 'hello vue',
+          msg: {
+            msg2: {
+              msg3: 'hh'
+            }
+          },
           auth: 'Mirai 白'
         }
       })
